# Baxter

./: new file
gpd/: 1.launch  1.launch~  get_grasp.py  move.py  select_grasp.py
gpd/tutorial1/: gpd1.py
gpd/tutorial2/: 1.py  2.py  3.py
pcl/: CMakeCache.txt  Makefile  cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cluster_extraction  cluster_extraction.cpp  cmake_install.cmake
pcl/cluster/: Makefile  cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cluster_extraction  cluster_extraction.cpp
pcl/plane/: 2.pcd  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  plane_removal  plane_removal.cpp
pcl/publisher/: publisher.cpp
rviz/: 1.rviz
